# c-Primery

./: .gitignore  saled_test  saled_test.cpp  test1  test1.cpp
dynamicMemeryManager/: CMakeLists.txt  main.cpp
dynamicMemeryManager/src/: StrVec.cpp  StrVec.h
query_process/: CMakeLists.txt  README.MD  main.cpp  main.h
query_process/src/: query_result.h
query_process_ng/: CMakeLists.txt  main.cpp  main.h  myfile
query_process_ng/src/: BinaryQuery.cpp  BinaryQuery.h  NotQuery.cpp  NotQuery.h  Query.cpp  Query.h  Query_base.cpp  Query_base.h  WordQuery.cpp  WordQuery.h  query_result.cpp  query_result.h  text_query.cpp  text_query.h
test1.dSYM/Contents/Resources/DWARF/: test1
定义行为像值的类/: hasptr.cpp  hasptr.h
定义行为像引用的类/: HasPrt.h  HasPtr.cpp
